--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "keycloakify-starter",
-    "homepage": "https://starter.keycloakify.dev",
+    "name": "cv-manager",
+    "homepage": "http://cvmanager.local.com",
     "version": "4.8.2",
     "description": "A starter/demo project for keycloakify",
     "repository": {
@@ -19,7 +19,6 @@
             "foo=bar"
         ],
         "extraThemeNames": [
-            "keycloakify-starter-variant-1"
         ]
     },
     "author": "u/garronej",
@@ -29,10 +28,8 @@
         "evt": "^2.4.15",
         "oidc-spa": "^2.0.2",
         "keycloakify": "^8.2.1",
-        "powerhooks": "^0.26.8",
         "react": "18.1.0",
-        "react-dom": "18.1.0",
-        "tsafe": "^1.6.0"
+        "react-dom": "18.1.0"
     },
     "devDependencies": {
         "@types/node": "^15.3.1",
