--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     npm install
     yarn build
     npx keycloakify
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: 'build_keycloak/target/*keycloak-theme*.jar'
-    artifact: 'cdot_keycloak_theme'
+- task: CopyFiles@2
+    inputs:
+      Contents: 'build_keycloak/target/cv-manager-keycloak-theme-4.8.2.jar'
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
